# CapsuleGen

./: CMakeLists.txt  README.txt
include/main/: Doxyfile  main.h
source/: main.c
source_code_with_scop/: for_loop.c  for_loop_tile.c  for_loop_union.c  for_reverse_loop.c
